:encoding=UTF-8:

{{{ Version 5.7pre1

Thanks to Björn "Vampire" Kautler, Matthieu Casanova for contributing to this release.

{{{ Bug Fixes

- VFSManager.canReadFile() was returning true only for directories (#4102 - Matthieu Casanova)

}}}
{{{ Miscellaneous

- Status bar design updated with the ability to add widgets to the left and the right of the bar (Matthieu Casanova)

}}}
{{{ API Changes

- New methods JEditBuffer.getWordWrap() and JeditBuffer.setWordWrap() (Matthieu Casanova)

- New method DialogChooser.openChooserWindow() showing a chooser dialog (Matthieu Casanova)

- New method DialogChooser.openListChooserWindow() showing a chooser dialog list (Matthieu Casanova)

- New method Buffer.setLineSeparator() (Matthieu Casanova)

- New method Buffer.reloadWithEncoding() (Matthieu Casanova)

- New method StatusBar.updateEvent() (Matthieu Casanova)

- New method BufferSet.contains() (Matthieu Casanova)

- Deprecated methods removed
    StandardUtilities.objectsEqual()
    TextArea.showPopupMenu()
    Mode.acceptFilename()
    OperatingSystem.isDOSDerived()
    OperatingSystem.hasJava17()
    MiscUtilities.getFileNameNoExtension()
    GUIUtilities.prettifyMenuLabel()
    GUIUtilities.setAutoMnemonic()
    GUIUtilities.parseColor()
    GUIUtilities.parseStyle()
    GUIUtilities.adjustForScreenBounds()
    GUIUtilities.requestFocus()
    GUIUtilities.isPopupTrigger()
    GUIUtilities.isMiddleButton()
    GUIUtilities.isRightButton()
    GUIUtilities.getScreenBounds()
    GUIUtilities.showPopupMenu()
    GUIUtilities.showPopupMenu()
    GUIUtilities.isAncestorOf()
    GUIUtilities.getParentDialog()
    GUIUtilities.setEnabledRecursively()
    GUIUtilities.setButtonContentMargin()
    GUIUtilities.makeSameSize()
    GUIUtilities.defaultTableCellSize()
    GUIUtilities.defaultColumnWidth()
    GUIUtilities.defaultRowHeight()
    Buffer.getFile()
    VFSManager.runInAWTThread()
    VFSManager.runInWorkThread() (Matthieu Casanova)

}}}
{{{ Editing
